fix overflowing tables & add test post #15

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -113,6 +113,12 @@
     @apply text-accent;
   }
 
+  .prose-cody table {
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+
   /*
   * ===== END =====
   */
